# real-time-sys-monitor-rust

./: .gitignore  Cargo.toml  README.md  system_log.json
src/: main.rs  models.rs  system_monitor.rs  utils.rs
