[package]
name = "rust-system-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.31.4"
iced = { version = "0.12", features = ["tokio"] }
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
chrono = { version = "0.4", features = ["serde"] }

